--- a/www/css/index.css
+++ b/www/css/index.css
@@ -1,6 +1,21 @@
 body {
     background-color: blueviolet;
 }
-a {
-    color: white;
-}
+a:link {
+    color: red;
+  }
+  
+  /* visited link */
+  a:visited {
+    color: green;
+  }
+  
+  /* mouse over link */
+  a:hover {
+    color: hotpink;
+  }
+  
+  /* selected link */
+  a:active {
+    color: blue;
+  }
