--- a/css/index.css
+++ b/css/index.css
@@ -2,20 +2,12 @@ body {
     background-color: blueviolet;
 }
 a:link {
-    color: red;
+    color: white;
   }
   
-  /* visited link */
-  a:visited {
-    color: green;
-  }
-  
-  /* mouse over link */
-  a:hover {
-    color: hotpink;
-  }
-  
-  /* selected link */
-  a:active {
-    color: blue;
-  }
+/* mouse over link */
+a:hover {
+  color: hotpink;
+}
+
+
