distanta dintre butoane e dinamica glow la titlu

--- a/css/index.css
+++ b/css/index.css
@@ -1,15 +1,36 @@
 body {
     background-color: blueviolet;
 }
+#title {
+  text-align: center;
+  color: white;
+  font-weight: bold;
+  text-shadow: 0px 0px 10px #C496CE, 0px 0px 20px #AB6FCE, 0px 0px 30px #8E2FCE;
+}
+  /*animation: glow 2s ease-in-out infinite alternate;
+}
+@keyframes glow {
+  from {
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
+  }
+  to {
+    text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+  }
+}*/
+.button-container{
+  display: flex;
+}
+.button-container > .button {
+  flex: 2;
+  text-align: center;
+}
 a {
+    position: sticky;
+    text-decoration: none;
     color: white;
     font-size: medium;
-  }
-  
-/* mouse over link */
+} 
 a:hover {
-  font-weight: bold;
-  font-size: larger;
+  font-weight: bold; 
 }
-
 
