--- a/css/all_memes.css
+++ b/css/all_memes.css
@@ -73,3 +73,40 @@ a {
   cursor: pointer;
   margin: 5px;
 }
+
+.capybara {
+    position: relative;
+    border: 10px outset #d79cfa;
+    border-radius: 10px;
+    text-align: center;
+    animation-name: slide;
+    animation-timing-function: ease-out;
+    animation-duration: 2s;
+    background-color: #f9f0ff23;
+}
+
+.doamnapel {
+    position: relative;
+    border: 10px outset #d79cfa;
+    border-radius: 10px;
+    text-align: center;
+    animation-name: slide2;
+    animation-timing-function: ease-out;
+    animation-duration: 2s;
+    background-color: #f9f0ff23;
+}
+
+h2.subtitle {
+    text-transform: uppercase;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+@keyframes slide {
+    from{left: -5000px; opacity: 0;}
+    to{left: 0px;}
+}
+@keyframes slide2 {
+    from{left: 5000px; opacity: 0;}
+    to{left: 0px;}
+}
